Bug 314653 - plasmate freezes using a component with a size as content for a CommonDialog
Summary: plasmate freezes using a component with a size as content for a CommonDialog
Status: RESOLVED FIXED
Alias: None
Product: Plasma SDK
Classification: Plasma
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-08 09:26 UTC by Anders Lund
Modified: 2013-03-03 18:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2013-02-08 09:26:26 UTC
Using CommonDialog with the content property set to a simple ListView and setting a size for that makes plasmate freeze when displaying the dialog. Evaluating the code, I get warnings in the plasmate console:

Warning: file:///usr/lib/kde4/imports/org/kde/plasma/components/Dialog.qml:196:5: QML QDeclarativeLoader_QML_166: Binding loop detected for property "sourceComponent"

Code for the CommonDialog:

            PlasmaComponents.CommonDialog {
                id: "areaSelector"
                titleText: i18n("Select area")
                 content: ListView {
//                     width: 200
//                     height: 200
                    delegate: Text {
                        anchors.margins: 3
                        text: name
                    }
                    model: ListModel {
                        ListElement { name: "Farvandet syd for Fyn" }
                        ListElement { name: "Farvandet nord for Fyn" }
                        ListElement { name: "Indre danske farvande" }
                        ListElement { name: "Bælthavet" }
                        ListElement { name: "Kattegat" }
                    }
                 }
            }
        }
        

If there is no size set, the dialog will not be usable. Setting the size causes the freeze.

Using other QML components also causes a freeze, if a size is set.

Reproducible: Always
Comment 1 Giorgos Tsiapaliokas 2013-02-14 11:28:31 UTC
Git commit d8902e8732263499f394c0f992c8e5659cbc6448 by Giorgos Tsiapaliokas.
Committed on 14/02/2013 at 11:56.
Pushed by tsiapaliwkas into branch 'plasmate/1.0'.

Make the konsolepreviewer to use its own custom event

REVIEW: 108944
Related: bug 314656

FIXED-IN: 1.0

M  +75   -33   plasmate/konsole/konsolepreviewer.cpp
M  +22   -4    plasmate/konsole/konsolepreviewer.h
M  +4    -14   plasmate/main.cpp
M  +17   -50   plasmate/mainwindow.cpp
M  +0    -1    plasmate/mainwindow.h

http://commits.kde.org/plasmate/d8902e8732263499f394c0f992c8e5659cbc6448
Comment 2 Giorgos Tsiapaliokas 2013-03-03 18:12:16 UTC
Git commit 5ae55561bc219d05ad966c29145f4f87f24b373f by Giorgos Tsiapaliokas.
Committed on 14/02/2013 at 11:56.
Pushed by tsiapaliwkas into branch 'master'.

Make the konsolepreviewer to use its own custom event

REVIEW: 108944
Related: bug 314656

FIXED-IN: 1.0

M  +75   -33   plasmate/konsole/konsolepreviewer.cpp
M  +22   -4    plasmate/konsole/konsolepreviewer.h
M  +4    -14   plasmate/main.cpp
M  +17   -50   plasmate/mainwindow.cpp
M  +0    -1    plasmate/mainwindow.h

http://commits.kde.org/plasmate/5ae55561bc219d05ad966c29145f4f87f24b373f