Make the konsolepreviewer to use its own custom event

REVIEW: 108944
BUG: 314653
BUG: 314656

FIXED-IN: 1.0